# hubsclient

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  hubsclient.rst  index.md  index.rst  modules.rst  quickstart.ipynb  quickstart.md  requirements.txt
src/hubsclient/: __init__.py  avatar.py  client.py  cloudapi.py  naf.py  utils.py
