[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubsclient"
dynamic = ["version"]
description = 'Python Interface and Client for Hubs Cloud'
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
keywords = []
authors = [
    { name = "Misha Klopukh", email = "misha@simvia.ai" },
    { name = "Vincenzo Macri", email = "vincenzo@simvia.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "websockets>=11.0.0",
    "gql>=3.4.0",
    "requests>=2.28.0",
    "requests-toolbelt>=0.9.1",
]

[project.urls]
Documentation = "https://github.com/simvia/hubsclient#readme"
Issues = "https://github.com/simvia/hubsclient/issues"
Source = "https://github.com/simvia/hubsclient"

[tool.hatch.version]
path = "src/hubsclient/__about__.py"

[tool.hatch.envs.default]
python = "/usr/local/bin/python"
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/hubsclient tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["hubsclient"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["hubsclient", "tests"]
branch = true
parallel = true
omit = [
    "src/hubsclient/__about__.py",
]

[tool.coverage.paths]
hubsclient = ["src/hubsclient", "*/hubsclient/src/hubsclient"]
tests = ["tests", "*/hubsclient/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
